# johnfig-rs

./: Cargo.toml  john.md
examples/: 0-dev.json  simple.config.json  simple.rs
examples/sub/: simple.config.json
src/: builder.rs  config.rs  error.rs  find.rs  lib.rs  loader.rs  locator.rs  macros.rs  watch.rs
src/builder/: builder.rs  config_file.rs  mod.rs
src/locator/: dir_locator.rs  dir_walk_locator.rs  locator.rs  mod.rs
src/value/: de.rs  index.rs  merge.rs  mod.rs  ser.rs  value.rs
src2/: config.rs  error.rs  locator.rs
