[package]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2021"
name = "johnfig"
version = "0.1.0"

[dependencies]
glob = "0.3"
log = "0.4"
pathdiff = "0.2"
serde = {version = "1", default-features = false, features = ["derive"]}
thiserror = "1"
tinytemplate = "1"
toback = {git = "https://github.com/kildevaeld/toback-rs"}
value = {git = "https://github.com/kildevaeld/value-rs", features = ["std", "serde"]}
walkdir = "2"

# Notify
async-broadcast = {version = "0.4", optional = true}
async-lock = {version = "2", optional = true}
futures = {version = "0.3", optional = true}
notify = {version = "5.0.0-pre.13", optional = true}

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["json"]
watch = ["notify", "async-broadcast", "async-lock", "futures"]

all_formats = ["toback/full"]

gura = ["toback/gura"]
json = ["toback/json"]
ron = ["toback/ron"]
toml = ["toback/toml"]
yaml = ["toback/yaml"]

send = ["toback/send"]
