[package]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2021"
name = "johnfig"
version = "0.1.0"


[features]
default = []

serde = ["dep:serde", "value/serde"]

builder = [
    "dep:glob",
    "dep:pathdiff",
    "dep:thiserror",
    "dep:tinytemplate",
    "dep:toback",
    "dep:walkdir",
    "dep:log",
    "serde",
]

all_formats = ["toback?/full"]
gura = ["toback?/gura"]
json = ["toback?/json"]
ron = ["toback?/ron"]
toml = ["toback?/toml"]
yaml = ["toback?/yaml"]


[dependencies]
value = { git = "https://github.com/kildevaeld/value-rs", features = ["std"] }

glob = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
pathdiff = { version = "0.2", optional = true }
thiserror = { version = "1", optional = true }
tinytemplate = { version = "1", optional = true }
toback = { git = "https://github.com/kildevaeld/toback-rs", features = [
    "send",
], optional = true }
walkdir = { version = "2", optional = true }

serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }


[dev-dependencies]
pretty_env_logger = "0.4"


[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["builder"]
