[package]
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2021"
name = "johnfig"
version = "0.1.0"


[features]
default = []

serde = ["dep:serde", "vaerdi/serde"]

builder = [
    "dep:glob",
    "dep:pathdiff",
    "dep:thiserror",
    "dep:tinytemplate",
    "dep:toback",
    "dep:walkdir",
    "dep:tracing",
    "serde",
]

all_formats = ["toback?/full"]
gura = ["toback?/gura"]
json = ["toback?/json"]
ron = ["toback?/ron"]
toml = ["toback?/toml"]
yaml = ["toback?/yaml"]
lua = ["toback?/lua"]

[dependencies]
vaerdi = { git = "https://github.com/kildevaeld/vaerdi-rs", features = ["std"] }
glob = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
pathdiff = { version = "0.2", optional = true }
thiserror = { version = "1", optional = true }
tinytemplate = { version = "1", optional = true }
toback = { git = "https://github.com/kildevaeld/toback-rs", features = [
    "send",
], optional = true }
walkdir = { version = "2", optional = true }

serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }


[dev-dependencies]
pretty_env_logger = "0.4"


[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["builder"]
